Changed some files
Effect some changes.

--- a/Lunch2.html
+++ b/Lunch2.html
@@ -393,7 +393,7 @@
         alt="pic" style="width:100%; height: 300px;">
     </div>
 <div class="column">
-    <img src ="Yam Porriage.jpg"
+    <img src ="song rice.png"
     alt="juice" style="width: 100%; height: 300px;">
     </div>
     <div class="column">
@@ -402,7 +402,7 @@
     </div>
 
     <div class="column">
-        <img src="oranges for you.png"
+        <img src="anty meal.png"
         alt="pic" style="width:100%; height: 300px;">
     </div>
 <div class="column">
@@ -451,9 +451,9 @@
                     <a href="lunch2.html">Lunch Meals</a>
                     <a href="Dinner2.html">Dinner</a>
                     <a href="Pasteries, Snacks and Chops.html">Pasteries</a>
-                    <a href="#">Products</a>
-                    <a href="#">Farms</a>
-                    <a href="Potbelly.html">Home</a>
+                    <a href="Products-egviolet kate.html">Products</a>
+                    <a href="Violet Integrated Farms.html">Farms</a>
+                    <a href="PotBelly.NG.html">Home</a>
                     <br>
                     <br>
                 </div>
