New lines of codes added
Still a work in progress.

--- a/PotBelly.NG.html
+++ b/PotBelly.NG.html
@@ -299,7 +299,7 @@ html{
     <div id="Breakfast" class="tabcontent">
         <h1>Breakfast</h1>
         <p>Order your Breakfast from us</p>
-        <a href="Breakfast .html" target="_self"> Breakfast Meals</a>
+        <a href="Breakfast  .html" target="_self"> Breakfast Meals</a>
     </div>
 
     <div id="Lunch" class="tabcontent">
@@ -1654,14 +1654,14 @@ html{
                 <h2 style="color:blue;font-size: larger;">Sausage Rolls</h2>
                 <p style="color:blue;font-size:large;">Meal No 48. </p>
                 <p style="color:blue;font-size: x-large;"></p>
-                <p style="color:blue;font-size: medium;">Nice SnackS</p>
+                <p style="color:blue;font-size: medium;">Nice Snacks</p>
                 <p style="color:blue;font-size: x-large;"></p>
                 <h2 style="color:blue; font-weight: bolder;font-size: large;">N4,000.00</h2>
                 <a href="Order Form.html" style="color:red;">kindly Place Your Order </a>
             </div>
         </div>
         <br>
-        <p style="color:rgb(7, 82, 7);font-style: italic;">
+        <p style="color:rgb(162, 209, 162);font-style: italic;">
             <marquee>Xperience our wonderful world ...</marquee>
         </p>
         <hr>
@@ -3342,9 +3342,9 @@ html{
         </div>
         <br>
         <div class="column">
-            <img src="Yam Porriage.jpg" alt="juice" style="width: 80%; height: 500px; border-radius: 50px;">
+            <img src="nija rice special.png" alt="juice" style="width: 80%; height: 500px; border-radius: 50px;">
             <div class="container">
-                <h2 style="color:blue;font-size: large;">Yam Porriage</h2>
+                <h2 style="color:blue;font-size: large;">Nija Rice Special</h2>
                 <p style="color:blue;font-size:large;">Meal No 117. </p>
                 <p style="color:blue;font-size: x-large;"></p>
                 <p style="color:blue;font-size: medium;">Tasty Meal.</p>
