Links to pages added
I have just added some more links.

--- a/Violet Integrated Farms.html
+++ b/Violet Integrated Farms.html
@@ -116,7 +116,7 @@ footer {
         class="closebtn"
         onclick="closeNav()">&times;</a>
                 <a href="about us Violet farms.html">About</a>
-                <a href="Terms and Conditions .html">Terms and Condition</a>
+                <a href="Terms and Condition Violet Farms.html">Terms and Condition</a>
                 <a href="copyright-Disclaimer.html">Copyright</a>
                 <a href="contact-violet int.html">Contact</a>
                 <a href="Team.html">Team</a>
