--- a/Pasteries, Snacks and Chops.html
+++ b/Pasteries, Snacks and Chops.html
@@ -300,7 +300,7 @@
         alt="soup" style="width: 100%; height: 300px;">
     </div>
     <div class="column">
-        <img src="Tangerine.jpg"
+        <img src="fruit rack.jpg"
         alt="pic" style="width:100%; height: 300px;">
     </div>
 <div class="column">
@@ -372,7 +372,7 @@
     alt="juice" style="width: 100%; height: 300px;">
     </div>
     <div class="column">
-        <img src="Carrot Juice.png"
+        <img src="fruits good.png"
         alt="soup" style="width: 100%; height: 300px;">
     </div>
 
@@ -424,11 +424,11 @@
     alt="juice" style="width: 100%; height: 300px;">
     </div>
     <div class="column">
-        <img src="African Salad Enugu.jpg"
+        <img src="fine meat pies.png"
         alt="soup" style="width: 100%; height: 300px;">
     </div> 
     <div class="column">
-        <img src="coconut rice with liver.png"
+        <img src="Grilled ChickenChops.png"
         alt="soup" style="width: 100%; height: 300px;">
     </div> 
     <div class="column">
