--- a/PotBelly.NG.html
+++ b/PotBelly.NG.html
@@ -6260,14 +6260,14 @@ html{
                 <a href="#" style="color: blue;">Order our Cookery Book</a>
                 <br>
                 <br>
-                <a href="Breakfast .html" style="color: blue;">Breakfast Meals</a>
+                
                 <a href="Breakfast .html" style="color: blue;">Breakfast Meals</a>
                 <a href="lunch2.html" style="color: blue;">Lunch Meals</a>
                 <a href="Dinner2.html" style="color: blue;">Dinner</a>
                 <a href="Pasteries, Snacks and Chops.html" style="color: blue;">Pasteries</a>
-                <a href="Egviolet Catherine Enterprises.html" style="color: blue;">Products</a>
+                <a href="Products-egviolet kate.html" style="color: blue;">Products</a>
                 <a href="Violet Integrated Farms.html" style="color:blue;">Farms</a>
-                <a href="Potbelly.html" style="color: blue;">Home</a>
+                <a href="PotBelly.NG.html" style="color: blue;">Home</a>
                 <br>
                 <br>
                 <small style="color: blue;">copyright © 2021 </small>
