--- a/contact us potbelly.ng.html
+++ b/contact us potbelly.ng.html
@@ -77,7 +77,7 @@
 <body>
     <div class="about-section">
         <h1 style="color:yellow;font-size:xx-large;">PotBelly.com</h1>
-        <h1 style="color:hotpink;">Our Team</h1>
+        <h1 style="color:hotpink;">Our Contact</h1>
         <p style="color: white;">PotBelly.NG is a reliable Nigerian online Business platform. We carry out the services of Catering, Food Delivery, and Trainings. 
             The management have desighned  product to satisfy both clients and Customers. Order quality foods for any occassion in our platform.
             Eating good food shouldnt be difficult. We are reliable and our products meet quality assurance.
@@ -105,7 +105,7 @@
 </div>
 </center>
     <br>
-    <h2 style="text-align: center; color:rgb(145, 8, 70);" >Our Team</h2>
+    <h2 style="text-align: center; color:rgb(145, 8, 70);" >Contact</h2>
     <div class="row">
     <div class="column">
         <div class="card">
