--- a/COPYWRITE POTBELLY.html
+++ b/COPYWRITE POTBELLY.html
@@ -161,10 +161,16 @@
     Email:enwokes@yahoo mail.com
     <br>
     <br>
-
-    <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"style="height:40px; width:40px; ">
-    <img src="icons/iconfinder_circle-twitter_317749.png"style="height:40px; width:40px; ">
-    <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"style="height:40px;width:40px;">
-</div>
+    <center>
+        <a target="_blank" href="https://www.instagram.com/abebeegbe/">
+            <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
+                style="height:40px; width:40px; ">
+                <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
+            <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+            <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
+            <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
+                style="height:40px;width:40px;"></h2>
+            </center>
+    
 </body>
 </html>
