--- a/Pasteries, Snacks and Chops.html
+++ b/Pasteries, Snacks and Chops.html
@@ -453,10 +453,16 @@
                     <p>We are a Team Of caterers that specialise in cooking Local Nigerian Dishes
                         For occasions. We also cater for homes, offices and schoools.</p>
                     <br>
-                       <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"style="height:40px; width:40px; ">
-                       <img src="icons/iconfinder_circle-twitter_317749.png"style="height:40px; width:40px; ">
-                       <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"style="height:40px;width:40px;">
-                
+                    <center>
+                        <a target="_blank" href="https://www.instagram.com/abebeegbe/">
+                            <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
+                                style="height:40px; width:40px; ">
+                                <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
+                            <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+                            <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
+                            <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
+                                style="height:40px;width:40px;"></h2>
+                            </center>
                 
                         <p>Our Working Hours (WAT Nigeria)</p>
                         <p>We are open for your Emails questions and sugestions on
