--- a/Products-egviolet kate.html
+++ b/Products-egviolet kate.html
@@ -196,11 +196,16 @@
             <h3 style="color: red;">Hotline: +234-08037078771 / 07064492689 </h3>
             <br>
             <h2>
-            <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
-                style="height:40px; width:40px; ">
-            <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
-            <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
-                style="height:40px;width:40px;"></h2>
+                <center>
+                    <a target="_blank" href="https://www.instagram.com/abebeegbe/">
+                        <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
+                            style="height:40px; width:40px; ">
+                            <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
+                        <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+                        <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
+                        <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
+                            style="height:40px;width:40px;"></h2>
+                        </center>
             <p>Our Working Hours (WAT Nigeria)</p>
             <p>
                 Monday-Friday: 5:30am - 9pm. &nbsp;
