Updates on the code
I keep making necessary changes in order to build a great experience for the users...

--- a/Breakfast  .html
+++ b/Breakfast  .html
@@ -444,14 +444,17 @@
                         For occasions. We also cater for homes, offices and schoools.</p>
                     <br>
                     <center>
+                        <h2>
                         <a target="_blank" href="https://www.instagram.com/abebeegbe/">
                             <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
-                                style="height:40px; width:40px; ">
+                                style="height:40px; width:40px; "></a>
                                 <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
-                            <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+                            <img src="icons/iconfinder_circle-twitter_317749.png"
+                            style="height:40px; width:40px; "></a>
                             <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
                             <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
-                                style="height:40px;width:40px;"></h2>
+                                style="height:40px;width:40px;"></a>
+                            </h2>
                             </center>
                 
                         <p>Our Working Hours (WAT Nigeria)</p>
