--- a/Products-egviolet kate.html
+++ b/Products-egviolet kate.html
@@ -199,13 +199,17 @@
                 <center>
                     <a target="_blank" href="https://www.instagram.com/abebeegbe/">
                         <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
-                            style="height:40px; width:40px; ">
+                            style="height:40px; width:40px; "></a>
                             <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
-                        <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+                        <img src="icons/iconfinder_circle-twitter_317749.png"
+                        style="height:40px; width:40px; "></a>
                         <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
                         <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
-                            style="height:40px;width:40px;"></h2>
+                            style="height:40px;width:40px;"></a>
+                        </h2>
                         </center>
+                        <br>
+                        <center>
             <p>Our Working Hours (WAT Nigeria)</p>
             <p>
                 Monday-Friday: 5:30am - 9pm. &nbsp;
@@ -216,17 +220,18 @@
             <a href="#">Order our Cookery Book</a>
             <br>
             <br>
-            <a href="Breakfast .html">Breakfast Meals</a>
+            <a href="Breakfast  .html">Breakfast Meals</a>
             <a href="lunch2.html">Lunch Meals</a>
             <a href="Dinner2.html">Dinner</a>
             <a href="Pasteries, Snacks and Chops.html">Pasteries</a>
-            <a href="Egviolet Catherine Enterprises.html">Products</a>
+            <a href="Products-egviolet kate.html">Products</a>
             <a href="Violet Integrated Farms.html">Farms</a>
-            <a href="Potbelly.html">Home</a>
+            <a href="PotBelly.NG.html">Home</a>
             <br>
             <br>
-            <small>copyright © 2021 </small>
+            <small style="color: red;">copyright © 2021 </small>
             </div>
+        </center>
     </footer>
 </section>
 </center>
