--- a/PotBelly.NG.html
+++ b/PotBelly.NG.html
@@ -6232,7 +6232,7 @@ html{
 
                 <h3 style="color: red;">Hotline: +234-08037078771 / 07064492689 </h3>
                 <br>
-                <h3 style="color:green; text-transform: capitalize;">Thank You for Ordering. You help us Create and Sustain Jobs in Nigeria.</h3>
+                <h3 style="color:green; text-transform: capitalize;">Thank You for Ordering. You help us Create Jobs in Nigeria.</h3>
                 <h2>
                     <a target="_blank" href="https://www.instagram.com/abebeegbe/">
                 <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
