--- a/Violet Integrated Farms.html
+++ b/Violet Integrated Farms.html
@@ -416,14 +416,17 @@ style="height: 180px; width: 300px;">
 </center>
 <br>
  <center>
+     <h2>
             <a target="_blank" href="https://www.instagram.com/abebeegbe/">
                 <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
-                    style="height:40px; width:40px; ">
+                    style="height:40px; width:40px; "></a>
                     <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
-                <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+                <img src="icons/iconfinder_circle-twitter_317749.png" 
+                style="height:40px; width:40px; "></a>
                 <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
                 <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
-                    style="height:40px;width:40px;"></h2>
+                    style="height:40px;width:40px;"></a>
+                </h2>
                 
                 <br>
     <p>Plot 3 Second Culvert Opposite Nigeria Law School Bwari, Federal capital 
