--- a/contact us potbelly.ng.html
+++ b/contact us potbelly.ng.html
@@ -159,14 +159,17 @@ style=" width:100%; align-content:center;height: 20em;">
 <br>
 <br>
     <center>
+        <h2>
     <a target="_blank" href="https://www.instagram.com/abebeegbe/">
         <img src="icons/iconfinder_social_media_social_media_logo_instagram_2993766.png"
-            style="height:40px; width:40px; ">
+            style="height:40px; width:40px; "></a>
             <a target="_blank" href="https://www.twitter.com/@vickyminaaj/">
-        <img src="icons/iconfinder_circle-twitter_317749.png" style="height:40px; width:40px; ">
+        <img src="icons/iconfinder_circle-twitter_317749.png" 
+        style="height:40px; width:40px; "></a>
         <a target="_blank" href="https://www.facebook.com/InspirationsEventsManagement/">
         <img src="icons/iconfinder_social_media_network_online_facebook_5000709.png"
-            style="height:40px;width:40px;"></h2>
+            style="height:40px;width:40px;"></a>
+        </h2>
         </center>
   </body>
 </html>
