Working on the links.
Working on the links on the website.

--- a/Breakfast  .html
+++ b/Breakfast  .html
@@ -468,13 +468,13 @@
                         <a href="#">Order our Cookery Book</a>
                         <br>
                         <br>
-                        <a href="Breakfast .html">Breakfast Meals</a>
+                        <a href="Breakfast  .html">Breakfast Meals</a>
                         <a href="lunch2.html">Lunch Meals</a>
                         <a href="Dinner2.html">Dinner</a>
                         <a href="Pasteries, Snacks and Chops.html">Pasteries</a>
-                        <a href="#">Products</a>
-                        <a href="#">Farms</a>
-                        <a href="Potbelly.html">Home</a>
+                        <a href="Products-egviolet kate.html">Products</a>
+                        <a href="Violet Integrated Farms.html">Farms</a>
+                        <a href="PotBelly.NG.html">Home</a>
                         <br>
                         <br>
                     </div>
