--- a/Violet Integrated Farms.html
+++ b/Violet Integrated Farms.html
@@ -450,7 +450,7 @@ style="height: 180px; width: 300px;">
          <a href="about us Violet farms.html" style="color:rgb(28, 236, 184);">About</a>
          <a href="Team.html" style="color:rgb(28, 236, 184) ;">Team</a>
          <a href="contact-violet int.html" style="color: rgb(28, 236, 184);">Contact</a>
-         <a href="Terms and Conditions .html" style="color: rgb(28, 236, 184);">Terms & Conditions</a>
+         <a href="Terms and Condition Violet Farms.html" style="color: rgb(28, 236, 184);">Terms & Conditions</a>
          <a href="#" style="color: rgb(28, 236, 184);">Clients</a>
          <a href="copyright-Disclaimer.html" style="color:rgb(28, 236, 184) ;">Copyright/Disclamer</a>
          <a href="Violet Integrated Farms.html" style="color: rgb(28, 236, 184);">Home</a>
