--- a/PotBelly.NG.html
+++ b/PotBelly.NG.html
@@ -226,8 +226,15 @@ html{
        <br>
        <P style="color: aliceblue;"> Email:violetegbe@yahoo.com &nbsp;
         /&nbsp;  Email:enwoks@yahoo.com</P>
+        <br>
 </div>
 <br>
+
+<form class="example" action="/action_page.php">
+    <input type="text" placeholder="Search..." name="search">
+    <button type="submit"><img src="Search Icon.png"><i class="search"></i></button>
+
+</form>
     <br>
     <p style="color:fuchsia;font-size: small;font-style: italic;background-color:yellow;padding-top:0.5em;">
         <marquee></marquee>
@@ -447,25 +454,7 @@ html{
             </center>
             
 <br>
-            <p>Plot 3 Second Culvert Opposite Nigeria Law School Bwari, Federal capital
-                territory Abuja Nigeria.</p>
-            <br>
-            <br>
-            <b>Zonal Office Address:</b>
-            <br>
-            <p>Plot 10 Umusia Umueye Oyigbo adjacent winners Church, Port Harcourt Rivers State
-                Nigeria.</p>
-            </address>
-            <br>
-            <br>
-            <b>Customer Care Help Center:</b>
-            <br>
-            &nbsp; &nbsp;
-            <p style="color:crimson;">Call :Vicky-08037078771 / Mike-08064492689.</p>
-            <br>
-            Email:violetegbe@yahoo mail.com
-            Email:enwoks@yahoo mail.com
-        </div>
+          
         <br>
         <br>
         <div class="column">
@@ -6218,18 +6207,6 @@ html{
                 <br>
                 <br>
                 <br>
-                <br>
-                <br>
-                <br>
-                <h1 style="font-size: larger;color: blue;font-family: 'Open Sans', 'Helvetica Neue', sans-serif;">Egviolet Catherine Enterprises.</h1>
-                <h3 style="color:blue;">Plot 3 Second Culvert Opposite Nigeria Law School Bwari, Federal capital
-                    territory Abuja Nigeria.</h3>
-                <br>
-                <h3 style="color:blue;">Plot 10 Umusia Umueye Oyigbo adjacent Winners Church, Port Harcourt Rivers State
-                    Nigeria.</h3>
-
-                <h3 style="color: red;">Hotline: +234-08037078771 / 07064492689 </h3>
-                <br>
                 <h3 style="color:green; text-transform: capitalize;">Thank You for Ordering. You help us Create Jobs in Nigeria.</h3>
                 <h2>
                     <a target="_blank" href="https://www.instagram.com/abebeegbe/">
@@ -6247,6 +6224,9 @@ html{
                     Saturday: 6am - 9pm.&nbsp;
                     Sundays:7am - 9pm.&nbsp;
                 </p>
+                <br>
+                <br>
+                <br>
                 <!--The div element for the map-->
                 <div id="map"></div>
 
@@ -6255,6 +6235,9 @@ html{
                 src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
                 async
                 ></script>
+                <br>
+                <br>
+                <br>
 
                 <a href="#" style="color: blue;">Order our Cookery Book</a>
                 <br>
